# CNVN

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_add_settlement_fields.py  002_add_payment_v2_tables.py  003_drop_settlement.py  004_lesson_overlap_constraints.py  005_availability_final_state_checks.py  006_add_dispute_cases.py  e87ee08f5642_initial_schema.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/v1/: auth.py  availability.py  disputes.py  (+7 more)
backend/app/core/: datetime_utils.py  security.py
backend/app/models/: __init__.py  availability.py  dispute.py  ledger.py  lesson.py  message.py  payment.py  payment_order.py  review.py  teacher_profile.py  teacher_tax_profile.py  user.py
backend/app/schemas/: availability.py  dispute.py  lesson.py  message.py  payment.py  review.py  tax_profile.py  teacher.py  user.py
backend/app/services/: __init__.py  auth_service.py  availability_service.py  dispute_service.py  dispute_watcher.py  ledger_service.py  lesson_room.py  lesson_service.py  message_service.py  payment_service.py  review_service.py  settlement_service.py  teacher_service.py  teacher_stats_service.py  wallet_service.py
backend/scripts/: e2e_payment_test.py
backend/tests/: conftest.py
backend/tests/integration/: test_alembic_migrations.py
backend/tests/scenarios/: test_payment_release_scenario.py
(+308 files in other folders)
